--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "request": "^2.62.0",
     "socket.io": "^1.3.6",
     "sqlite3": "^3.0.10"
   }
